--- a/client/base.scss
+++ b/client/base.scss
@@ -24,6 +24,14 @@ input:-moz-placeholder {
 	font-weight: 300;
 }
 
+input[type=checkbox] + label, input[type=radio] + label  {
+  -webkit-user-select:none;
+  -khtml-user-select:none;
+  -moz-user-select:none;
+  -o-user-select:none;
+  user-select:none;
+}
+
 body {
 	background: #FFF;
 	font-family: 'Lato', sans-serif;
