--- a/client/components/Manga/MangaUploadWidget.css
+++ b/client/components/Manga/MangaUploadWidget.css
@@ -6,35 +6,36 @@
   border-radius: 4px;
 }
 
-.form-content{
+.form-content {
   width: 100%;
   max-width: 600px;
-  margin: auto;
+  margin: 30px auto;
   font-size: 14px;
 }
 
-.form-title{
-  font-size: 16px;
-  font-weight: 700;
-  margin-bottom: 16px;
-  color: #757575;
-}
-
-.form-field{
+.form-field {
   width: 100%;
   margin-bottom: 16px;
   font-family: 'Lato', sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   line-height: normal;
-  padding: 12px 16px;
+  padding: 8px 16px;
   border-radius: 4px;
   border: 1px solid #ddd;
   outline: none;
   color: #212121;
 }
 
+.form-checkbox {
+  margin: 0 5px;
+}
+
 textarea {
   min-height: 200px;
+}
+
+input[type=checkbox], input[type=radio] {
+  margin-right: 2px;
 }
 
 .post-submit-button {
