--- a/client/base.scss
+++ b/client/base.scss
@@ -24,7 +24,7 @@ input:-moz-placeholder {
 	font-weight: 300;
 }
 
-input[type=checkbox] + label, input[type=radio] + label  {
+label {
   -webkit-user-select:none;
   -khtml-user-select:none;
   -moz-user-select:none;
