--- a/client/components/Manga/MangaListItem.css
+++ b/client/components/Manga/MangaListItem.css
@@ -18,15 +18,16 @@
 }
 
 .thumbnailWrap {
-  margin: 0;
-  padding: 0 0 0 15px;
+  margin: 0 0 0 15px;
   float:left;
   line-height: 0;
+  width: 260px;
 }
 
 .thumbnail {
-  width: 200px;
-  height: 161px;
+  width: 100%;
+  height: 0;
+  padding-bottom: 72%;
   background-position: top;
   background-size: cover;
 }
@@ -77,4 +78,9 @@
 
 .characters > *:last-child:after {
   display:none;
+}
+
+@media screen and (max-width:550px) {
+  .thumbnailWrap { max-width: 260px; margin:0 auto 15px; float:none; line-height:0; text-align:center; }
+  .data { float:none; width:auto; margin: 0 20px 20px; }
 }
